crates/spite-parser/tests/snapshots/parser_integration__for_in__syntax_and_diagnostics_snapshots-2.snap
---
source: crates/spite-parser/tests/for_in.rs
expression: "parse_script(\"for(let x=1 in {}) ;\").unwrap_err()"
---
Diagnostic {
    kind: Syntax,
    span: Span {
        start: 10,
        end: 11,
    },
    message: "for-in requires one binding without an initializer",
}
